welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:65: error: not found: value getMondeLongueur
			if (x+diag+1 !=  getMondeLongueur() ) {
                                         ^